--- a/android/assets/jsons/translations/Romanian.properties
+++ b/android/assets/jsons/translations/Romanian.properties
@@ -93,7 +93,7 @@ Research Agreement = Acord de Cercetare
 Declare war = Declară război
 Declare war on [civName]? = Declari război contra [civName]?
  # Requires translation!
-Let's begin! = 
+Let's begin! = Să Începem!
 [civName] has declared war on us! = [civName] ne-au declarat război!
 [leaderName] of [nation] = [leaderName] de [nation]
 You'll pay for this! = Veți plăti pentru asta!
